tests/expectations/compiler/dead_code/simple_dead_code.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:9:24
     |
   9 |         let z: field = BHP256::hash_to_field(x);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^
